test/analyze/name_resolution/anonymous_function_scope.myte
module test

fun test() {
  // Success and failure to resolve
  fn (x: Int) -> x + y;

  // Nested resolved
  fn (x: Int) {
    x;

    fn (y: Int) {
      x + y;
    };
  };

  // Failure to resolve
  x;
}

fun main() {}